[project]
name = "deepagents-landlock"
version = "0.1.0"
description = "Landlock LSM sandbox backend for LangChain Deep Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepagents_landlock"]
